Added meta description

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Anthony Tambrin</title>
+    <title>Anthony Tambrin's Playground</title>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Playground containing my personal coding works, music arrangements and compositions, artworks and illustrations."
+    />
   </head>
 
-  <body style="opacity: 0">
+  <body style="opacity: 0;">
     <canvas id="fgCanvas"></canvas>
     <svg id="svgCanvas"></svg>
     <div id="divCanvas"></div>
@@ -193,9 +197,9 @@
     </div>
     <div id="fgDiv">
       <ul id="artworksList"></ul>
-      <div id="artworksLabel" style="opacity: 0">2D illustrations &amp; 3D artworks</div>
+      <div id="artworksLabel" style="opacity: 0;">2D illustrations &amp; 3D artworks</div>
       <ul id="songsList"></ul>
-      <div id="songsLabel" style="opacity: 0">Original compositions &amp; arrangements</div>
+      <div id="songsLabel" style="opacity: 0;">Original compositions &amp; arrangements</div>
     </div>
     <script src="src/index.js"></script>
   </body>
