--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Playground containing my personal coding works, music arrangements and compositions, artworks and illustrations."
+      content="Playground containing Anthony Tambrin's personal coding works, music arrangements and compositions, artworks and illustrations."
     />
   </head>
 
